--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>FindHome</title>
     <link rel="stylesheet" href="css/reset.css"/>
     <link rel="stylesheet" href="css/style.css"/>
+    <script src="https://kit.fontawesome.com/1ed5727593.js" crossorigin="anonymous"></script>
+    <script src="js/script.js" type="module"></script>
   </head>
 
   <body>
@@ -13,11 +15,10 @@
 
     </header>
     <main>
-      
+
     </main>
     <div class="wrapper">
 
     </div>
-    <script src="js/script.js" type="module"></script>
   </body>
 </html>
