--- a/formulaire.html
+++ b/formulaire.html
@@ -17,7 +17,7 @@
       src="https://kit.fontawesome.com/1ed5727593.js"
       crossorigin="anonymous"
     ></script>
-    <script src="js/script.js" type="module"></script>
+    <script src="js/formulaire.js" type="module"></script>
   </head>
 
   <body>
@@ -62,10 +62,6 @@
         <fieldset id="prix">
           <label for="price">Prix <abbr title="required">*</abbr> :</label>
           <input type="number" id="price" required />
-          <input type="radio" name="price" id="rent" value="Loyer" required />
-          <label for="rent">Loyer</label>
-          <input type="radio" name="price" id="buy" value="Achat"/>
-          <label for="buy">Achat</label>
         </fieldset>
 
         <fieldset id="adresse">
