--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
     </header>
 
     <main class="wrapper">
-      <section class="flex">
+      <section class="flex" id="cardTarget">
         <div class="card">
-          <img src="img/maison.jpg" alt="Maison">
+          <img src="img/maison.jpg" alt="Maison" class="annonce_img">
           <div class="building_info">
             <div class="flex">
               <h3><span>Maison</span> - 240m²</h3>
-              <p>400 000€</p>
+              <p>400000€</p>
             </div>
-            <p>102 rue de l'adresse 38000 Grenoble</p>
-            <p>1 Étage - Garage - Jardin</p>
-            <p>Nullam porttitor nisl ac augue tempor, vel 
+            <p class="info_text">102 rue de l'adresse 38000 Grenoble</p>
+            <p class="info_text">1 Étage - Garage - Jardin</p>
+            <p class="info_text">Nullam porttitor nisl ac augue tempor, vel 
             dapibus nulla vestibulum. Aliquam accumsan
             eros et odio venenatis accumsan.</p>
           </div>
         </div>
 
-        <div class="card ">
+<!--         <div class="card ">
           <img src="img/appartement.jpg" alt="Maison">
           <div class="building_info">
             <div class="flex">
@@ -74,7 +74,7 @@
             dapibus nulla vestibulum. Aliquam accumsan
             eros et odio venenatis accumsan.</p>
           </div>
-        </div>
+        </div> -->
       </section>
 
     <section class="announce">
