Create card Terrain

--- a/formulaire.html
+++ b/formulaire.html
@@ -120,11 +120,11 @@
         <fieldset id="etude_de_sol">
           <legend>Étude de sol :
             <label for="study_done">
-              <input type="radio" name="ground" id="study_done" value="Réalisé" required />
+              <input type="radio" name="ground" id="study_done" value="Étude réalisé" required />
               Réalisé
             </label>
             <label for="study_not_done">
-              <input type="radio" name="ground" id="study_not_done" value="Pas réalisé"/>
+              <input type="radio" name="ground" id="study_not_done" value="Étude pas réalisé"/>
               Pas réalisé
             </label>
             <label for="not_concerned">
